# ns-emu-tools

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  build_all.bat  build_all.sh  changelog.md  config.py  game_data.json  github_mirrors.json  keys_info.json  main.py  main_devnull.py  package.bat  package_all.bat  pyproject.toml  readme.md  requirements.txt  send_release_notify.py  storage.py  ui.py  ui_old.py  ui_webview.py  update_game_data.py  update_github_mirrors.mjs  update_keys_info.py  update_requirements.bat
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-build.yaml  codeql.yml  manual-build-console.yml  manual-build-webview.yml  manual-build.yml  release-notify.yml  update-game-data.yml  update-github-mirrors.yml
api/: __init__.py  cfst_api.py  cheats_api.py  common_api.py  common_response.py  ryujinx_api.py  save_manager_api.py  suyu_api.py  updater_api.py  yuzu_api.py
build_tools/: zip_files.py
doc/: dev.md
docs/: README.md  api-reference.md  architecture.md  bytehaul-migration-plan.md  deployment-guide.md  development-guide.md  self-update-plan.md
docs/modules/: README.md  api.md  config.md  hooks.md  module.md  repository.md  utils.md
docs/plan/: eel-to-tauri-migration.md  macos-citron-eden-install.md  phase1-test-report.md  phase2-test-report.md  rust-downloader-implementation-plan.md  rust-tauri-refactoring-plan.md  todo.md
exception/: common_exception.py  download_exception.py  install_exception.py
frontend/: .browserslistrc  .editorconfig  .env.development  .gitignore  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mts
frontend/src/: App.vue  components.d.ts  main.ts  typed-router.d.ts
frontend/src/components/: ChangeLogDialog.vue  ConsoleDialog.vue  DialogTitle.vue  FaqGroup.vue  InstallationDialog.vue  MarkdownContentBox.vue  NewVersionDialog.vue  OtherLinkItem.vue  ProgressDialog.vue  README.md  SimplePage.vue  SpeedDial.vue  YuzuSaveCommonPart.vue  YuzuSaveRestoreTab.vue
frontend/src/layouts/: AppBar.vue  AppDrawer.vue  README.md  View.vue  default.vue
frontend/src/pages/: about.vue  cloudflareST.vue  faq.vue  index.vue  keys.vue  otherLinks.vue  ryujinx.vue  settings.vue  suyu.vue  yuzu.vue  yuzuCheatsManagement.vue  yuzuSaveManagement.vue
frontend/src/plugins/: README.md  index.ts  mitt.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: ConfigStore.ts  ConsoleDialogStore.ts  InstallationStore.ts  ProgressStore.ts  README.md  YuzuSaveStore.ts  app.ts  index.ts
frontend/src/styles/: README.md  settings.scss
frontend/src/types/: DefaultConfig.ts  index.ts  installation.ts  progress.ts
frontend/src/utils/: common.ts  markdown.ts  tauri.ts
hooks/: hook-api.py
module/: cfst.py  cheats.py  common.py  dialogs.py  downloader.py  firmware.py  google_drive_api.py  hosts.py  msg_notifier.py  network.py  nsz_wrapper.py  ryujinx.py  save_manager.py  sentry.py  suyu.py  updater.py  yuzu.py
module/cheats/: __init__.py  cheats.py  cheats_types.py  cheats_yuzu_parser.py
repository/: my_info.py  ryujinx.py  suyu.py  yuzu.py
repository/domain/: release_info.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: cheats.rs  common.rs  mod.rs  ryujinx.rs  save_manager.rs  yuzu.rs
src-tauri/src/models/: cheats.rs  installation.rs  mod.rs  progress.rs  release.rs  response.rs  storage.rs
src-tauri/src/repositories/: app_info.rs  config_data.rs  mod.rs  ryujinx.rs  yuzu.rs
src-tauri/src/services/: aria2.rs  cheats.rs  cheats_parser.rs  crypto.rs  doh.rs  downloader.rs  firmware.rs  installer.rs  keys.rs  mod.rs  msvc.rs  nca.rs  network.rs  notifier.rs  ryujinx.rs  save_manager.rs  updater.rs  yuzu.rs
src-tauri/src/services/downloader/: aria2.rs  aria2_backend.rs  aria2_install.rs  bytehaul_backend.rs  chunk_manager.rs  client.rs  filename.rs  manager.rs  mod.rs  retry_strategy.rs  rust_downloader.rs  state_store.rs  tests.rs  types.rs
src-tauri/src/utils/: archive.rs  common.rs  mod.rs  platform.rs  webview.rs
src-tauri/tests/: README.md  bytehaul_phase0_verification.rs  download_integration_test.rs  eden_integration_test.rs  phase1_verification.rs
src-tauri/tests/common/: mod.rs
tests/: update_github_mirrors.test.mjs
utils/: admin.py  common.py  doh.py  hardware.py  network.py  package.py  string_util.py  webview2.py
vue/: .env.development  .env.production  babel.config.js  package-lock.json  package.json  vue.config.js  webpack.config.js
vue/public/: index.html
vue/src/: App.vue  main.js
vue/src/components/: ChangeLogDialog.vue  FaqGroup.vue  (+9 more)
vue3/: .env.production  .eslintrc.js  README.md  index.html  package.json  tsconfig.json  vite.config.ts
vue3/src/: App.vue  main.ts
web/: index.html  index_ryujinx.html  index_yuzu.html  install_keys.html  script.js  style.css  vue.js
web/css/: style.css
web/js/: script_ryujinx.js  script_yuzu.js
web_old/: index_ryujinx.html
web_old/js/: script_ryujinx.js  script_yuzu.js
(+53 files in other folders)
