[project]
name = "ns-emu-tools"
version = "0.4.2"
description = ""
authors = [{ name = "triwinds", email = "triwinds@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "tqdm>=4.66.1,<5",
    "aria2p>=0.11.3",
    "requests>=2.31.0,<3",
    "py7zr>=0.20.6",
    "beautifulsoup4>=4.12.2,<5",
    "eel>=0.18.0",
    "pywin32>=306",
    "psutil>=5.9.5",
    "gevent>=23.7.0",
    "httplib2>=0.22.0",
    "requests-cache>=1.1.0,<2",
    "dnspython[doh]>=2.4.2,<3",
    "sentry-sdk>=1.29.2,<2",
    "xmltodict>=0.13.0",
    "chardet>=5.2.0,<6",
    "pywebview>=4.2.2,<5",
    "dataclasses-json>=0.5.14",
    "pyinstaller>=6.3.0,<7",
    "nsz",
    "orjson>=3.10.18",
]

[dependency-groups]
dev = ["pyinstaller>=6.0.0,<7"]

[tool.uv]

[tool.uv.sources]
nsz = { git = "https://github.com/triwinds/nsz" }

[tool.hatch.build.targets.sdist]
include = ["module"]

[tool.hatch.build.targets.wheel]
include = ["module"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
